Backport to Fabric 1.16.5